home platform overview fix to big bottom spacing

--- a/page/sass/platform-overview.scss
+++ b/page/sass/platform-overview.scss
@@ -27,7 +27,6 @@
     }
 
     .feature-text {
-      margin-bottom: 50px;
       font-size: $font-size-small;
 
       @media (max-width: $screen-sm-min) {
